Update live demo links and fix media links in index.html

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                         transactions. Built to sell various products, including CDs and vinyl records, it can be easily
                         adapted to suit any merchandise. The integrated secure database ensures smooth payments and
                         user-friendly features like registration and sessions.</p>
-                    <a href="/bandupshop/" class="demo-button">Live Demo</a>
+                    <a href="https://bandup.ygnaciomarts.com/" class="demo-button">Live Demo</a>
                 </div>
                 <div class="project-image">
-                    <img src="/bandupshop/img/600x315.png" alt="Live Demo Image">
+                    <img src="https://bandup.ygnaciomarts.com/bandupshop/img/600x315.png" alt="Live Demo Image">
                 </div>
             </div>
             <hr>
@@ -52,7 +52,7 @@
             <div class="project">
                 <div class="project-content">
                     <p>(WIP) A next-level e-commerce platform built with cutting-edge technologies, MICO Shop elevates the online shopping experience. Unlike traditional platforms, MICO leverages a robust REST API powered by Java Spring Boot for smooth backend operations, while React ensures a seamless, interactive frontend. Designed to sell a variety of products with efficiency and scalability in mind, it offers secure transactions and a responsive, user-centric interface.</p>
-                    <a href="/mico/dist/" class="demo-button">Live Demo</a>
+                    <a href="https://shopmicomx.vercel.app/" class="demo-button">Live Demo</a>
                 </div>
             </div>
             <hr>
@@ -68,7 +68,7 @@
                             layout that enhances the overall experience of browsing music, artist profiles, and
                             playlists. With attention to both form and function, the design promotes user interaction
                             while maintaining an intuitive flow throughout the platform.</p>
-                        <p class="media-lin</p>ks">
+                        <p class="media-links">
                             <a href="/resources/bandupmusic_guide.pdf" target="_blank" class="enfasis-link">Watch out
                                 the HTML & CSS guides</a> developed for this project.
                         </p>
@@ -208,6 +208,7 @@
                         </path>
                     </svg>
                     <a href="mailto:ygnaciomarts@gmail.com" class="linkedin-link">ygnaciomarts@gmail.com</a>
+                    <a href="mailto:contact@ygnaciomarts.com" class="linkedin-link">contact@ygnaciomarts.com</a>
                 </p>
             </section>
         </div>
