Update media links section in index.html for improved layout

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     </svg>
                     <a href="https://github.com/ygnaciomarts/" class="linkedin-link">GitHub</a>
                 </p>
-                <p class="media-links">
+                <p class="media-links" style="margin-bottom: 0.5rem;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-linkedin" viewBox="0 0 16 16">
                         <path
@@ -208,6 +208,12 @@
                         </path>
                     </svg>
                     <a href="mailto:ygnaciomarts@gmail.com" class="linkedin-link">ygnaciomarts@gmail.com</a>
+                </p>
+                <p class="media-links" style="margin-top: 0rem;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-linkedin" viewBox="0 0 16 16">
+                        <path />
+                    </svg>
                     <a href="mailto:contact@ygnaciomarts.com" class="linkedin-link">contact@ygnaciomarts.com</a>
                 </p>
             </section>
