--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             </div>
             <hr>
 
-            <h3 style="padding-top: 10px;">MICO Shop</h3>
+            <h3 style="padding-top: 10px;">MICO Stre</h3>
             <div class="project">
                 <div class="project-content">
-                    <p>(WIP) A next-level e-commerce platform built with cutting-edge technologies, MICO Shop elevates the online shopping experience. Unlike traditional platforms, MICO leverages a robust REST API powered by Java Spring Boot for smooth backend operations, while React ensures a seamless, interactive frontend. Designed to sell a variety of products with efficiency and scalability in mind, it offers secure transactions and a responsive, user-centric interface.</p>
-                    <a href="https://shopmicomx.vercel.app/" class="demo-button">Live Demo</a>
+                    <p>(WIP) A next-level e-commerce platform built with cutting-edge technologies, MICO Store elevates the online shopping experience. Unlike traditional platforms, MICO leverages a robust REST API powered by Java Spring Boot for smooth backend operations, while React ensures a seamless, interactive frontend. Designed to sell a variety of products with efficiency and scalability in mind, it offers secure transactions and a responsive, user-centric interface.</p>
+                    <a href="https://mico.ygnaciomarts.com/" class="demo-button">Live Demo</a>
                 </div>
             </div>
             <hr>
